Crash during animation playback #66283

Closed
opened 2019-06-30 22:07:42 +02:00 by paul geraskin · 7 comments
Member

System Information
Operating system: Windows 10
Graphics card: Nvidia

Blender Version
image.png

Short description of error
Crash during animation playback. To repeat it:

  • open my file and play animation
  • make some changes in material during the animation
  • Press Ctrl+z and Ctrl+Shift+z some times
  • Crash
    tmp1.blend - my file

Exact steps for others to reproduce the error

temp1.mp4

**System Information** Operating system: Windows 10 Graphics card: Nvidia **Blender Version** ![image.png](https://archive.blender.org/developer/F7557569/image.png) **Short description of error** Crash during animation playback. To repeat it: - open my file and play animation - make some changes in material during the animation - Press Ctrl+z and Ctrl+Shift+z some times - Crash [tmp1.blend](https://archive.blender.org/developer/F7557573/tmp1.blend) - my file **Exact steps for others to reproduce the error** [temp1.mp4](https://archive.blender.org/developer/F7557571/temp1.mp4)
Author
Member

Added subscriber: @PaulGeraskin

Added subscriber: @PaulGeraskin

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski

Can confirm.
Windows-10-10.0.16299 64 Bits
GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Can confirm. **Windows-10-10.0.16299 64 Bits GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67**
Member

Added subscribers: @Sergey, @ideasman42, @lichtwerk

Added subscribers: @Sergey, @ideasman42, @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2019-07-01 10:46:33 +02:00
Member

Asserts here (where scene_cow is NULL):

BLI_assert(scene_cow != NULL && DEG::deg_copy_on_write_is_expanded(&scene_cow->id));

1  raise                                                             0x7ffff1bb1e75 
2  abort                                                             0x7ffff1b9c895 
3  DEG_get_evaluated_scene                   depsgraph_query.cc 159  0x21074d8      
4  screen_animation_step                     screen_ops.c       4213 0x2ed4197      
5  wm_operator_invoke                        wm_event_system.c  1438 0x23c768f      
6  wm_handler_operator_call                  wm_event_system.c  2275 0x23c95cb      
7  wm_handlers_do_keymap_with_keymap_handler wm_event_system.c  2555 0x23c9eab      
8  wm_handlers_do_intern                     wm_event_system.c  2692 0x23ca4c3      
9  wm_handlers_do                            wm_event_system.c  2945 0x23cb213      
10 wm_event_do_handlers                      wm_event_system.c  3415 0x23cc6dd 

not sure if this is for @ideasman42 [Undo] or @Sergey [DEG], assigning @Sergey first...

Asserts here (where `scene_cow` is NULL): `BLI_assert(scene_cow != NULL && DEG::deg_copy_on_write_is_expanded(&scene_cow->id));` ``` 1 raise 0x7ffff1bb1e75 2 abort 0x7ffff1b9c895 3 DEG_get_evaluated_scene depsgraph_query.cc 159 0x21074d8 4 screen_animation_step screen_ops.c 4213 0x2ed4197 5 wm_operator_invoke wm_event_system.c 1438 0x23c768f 6 wm_handler_operator_call wm_event_system.c 2275 0x23c95cb 7 wm_handlers_do_keymap_with_keymap_handler wm_event_system.c 2555 0x23c9eab 8 wm_handlers_do_intern wm_event_system.c 2692 0x23ca4c3 9 wm_handlers_do wm_event_system.c 2945 0x23cb213 10 wm_event_do_handlers wm_event_system.c 3415 0x23cc6dd ``` not sure if this is for @ideasman42 [Undo] or @Sergey [DEG], assigning @Sergey first...

This issue was referenced by c64b72998c

This issue was referenced by c64b72998cfaab0512de38843219d074e876a0a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66283
No description provided.