Fix T66283: Crash on redo/undo during playback